Replace sun.misc.BASE64 with java.util.Base64 in AESencrp.java