@@ -18,12 +18,13 @@
 package com.floreantpos.util;
 
 import java.security.Key;
+import java.util.Base64;
 
 import javax.crypto.Cipher;
 import javax.crypto.spec.SecretKeySpec;
 
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
+//import sun.misc.BASE64Decoder;
+//import sun.misc.BASE64Encoder;
 
 public class AESencrp {
 
@@ -37,7 +38,8 @@ public class AESencrp {
 		Cipher c = Cipher.getInstance(ALGO);
 		c.init(Cipher.ENCRYPT_MODE, key);
 		byte[] encVal = c.doFinal(Data.getBytes());
-		String encryptedValue = new BASE64Encoder().encode(encVal);
+		String encryptedValue = Base64.getEncoder().encodeToString(encVal);
+		//String encryptedValue = new BASE64Encoder().encode(encVal);
 		return encryptedValue;
 	}
 
@@ -45,7 +47,8 @@ public class AESencrp {
 		Key key = generateKey();
 		Cipher c = Cipher.getInstance(ALGO);
 		c.init(Cipher.DECRYPT_MODE, key);
-		byte[] decordedValue = new BASE64Decoder().decodeBuffer(encryptedData);
+		byte[] decordedValue = Base64.getDecoder().decode(encryptedData);
+		//byte[] decordedValue = new BASE64Decoder().decodeBuffer(encryptedData);
 		byte[] decValue = c.doFinal(decordedValue);
 		String decryptedValue = new String(decValue);
 		return decryptedValue;
